IndexBuildsCoordinator crashes on index build with duplicate index names

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 4.3.1
    • Affects Version/s: None
    • Component/s: Storage
    • None
    • Fully Compatible
    • ALL
    • Execution Team 2019-07-29
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      When the IndexBuildsCoordinator is enabled for the createIndexes command, starting an index build with duplicate index names in the indexes field results in a server crash rather than failing the command with an IndexKeySpecsConflict error.

            Assignee:
            Benety Goh (Inactive)
            Reporter:
            Benety Goh (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: