SERVER-42272 IndexBuildsCoordinator ignores duplicate index names within an index build